@@ -3,24 +3,21 @@ package space.hwahyang.invcaptive;
 import org.bukkit.Material;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class InventoryManager {
 
     /**
-     * ¹èÄ¡ °¡´ÉÇÑ MaterialÀ» ¹«ÀÛÀ§ ¹è¿­·Î ¹İÈ¯ÇÕ´Ï´Ù.
-     * @return ¹èÄ¡ °¡´ÉÇÑ ¸ğµç MaterialÀÌ Inventory Å©±â¿¡ ¸ÂÃç ¹«ÀÛÀ§·Î ¼¯¿©¼­ ¹İÈ¯µË´Ï´Ù.
+     * ë°°ì¹˜ ê°€ëŠ¥í•œ Materialì„ ë¬´ì‘ìœ„ ë°°ì—´ë¡œ ë°˜í™˜í•©ë‹ˆë‹¤.
+     * @return ë°°ì¹˜ ê°€ëŠ¥í•œ ëª¨ë“  Materialì´ Inventory í¬ê¸°ì— ë§ì¶° ë¬´ì‘ìœ„ë¡œ ì„ì—¬ì„œ ë°˜í™˜ë©ë‹ˆë‹¤.
      */
-    public EnumMap<Material, Integer> getMaterialArray() {
-        List<Material> data = Arrays.stream(Material.values()).filter(target -> target.isBlock() && !target.isAir()).toList();
+    public List<Material> getMaterialArray() {
+        List<Material> data = Arrays.stream(Material.values()).filter(target -> target.isBlock() && !target.isAir()).collect(Collectors.toList());
         Collections.shuffle(data);
 
-        int count = 9 * 4 + 5; // ÇÃ·¹ÀÌ¾î ÀÎº¥Åä¸® 36Ä­ + Àåºñ 4Ä­ + º¸Á¶¼Õ 1Ä­
-        EnumMap<Material, Integer> map = new EnumMap<>(Material.class);
+        int count = 9 * 4 + 5; // í”Œë ˆì´ì–´ ì¸ë²¤í† ë¦¬ 36ì¹¸ + ì¥ë¹„ 4ì¹¸ + ë³´ì¡°ì† 1ì¹¸
+        data = data.subList(0, count);
 
-        for (int i = 0; i < count; i++) {
-            map.put(data.get(i), i);
-        }
-
-        return map;
+        return data;
     }
 }
